# ndk_rooting

./: README.md  glog_test.sh  key.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hyungwoo/rooting/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scanner.cfg
app/src/main/java/com/hyungwoo/rooting/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hyungwoo/rooting/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scanner/: build.gradle
scanner/src/androidTest/java/com/hyungwoo/scanner/: ExampleInstrumentedTest.java
scanner/src/main/: AndroidManifest.xml
scanner/src/main/cpp/: CMakeLists.txt  scanner.cpp
scanner/src/main/cpp/android_navigate/: GlobalContext.hpp
scanner/src/main/cpp/scanner/: ScannerBinary.cpp  ScannerBinary.h  ScannerFactory.h  ScannerInterface.h  ScannerManager.cpp  ScannerManager.h  ScannerPackage.cpp  ScannerPackage.h  ScannerPermission.cpp  ScannerPermission.h  ScannerProp.cpp  ScannerProp.h  ScannerType.h  ScannerWhich.cpp  ScannerWhich.h
scanner/src/main/cpp/unit_test/: CMakeLists.txt  GTestMain.cpp
scanner/src/main/cpp/utils/common/: CommandLine.cpp  CommandLine.h  StringTool.cpp  StringTool.h
scanner/src/main/cpp/utils/configure/: Configure.cpp  Configure.h  simpleini.h
scanner/src/main/cpp/utils/logger/: Logger.cpp  Logger.h
scanner/src/main/java/com/hyungwoo/scanner/: ScannerNativeWrapper.java
scanner/src/test/java/com/hyungwoo/scanner/: ExampleUnitTest.java
